[package]
name = "producer-pkg"
version = "0.1.0"
edition = "2024"
publish = false

# Make this a standalone workspace (prevents inheriting from parent)
[workspace]

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[features]
default = []
nonapi = ["miniextendr-api/nonapi"]
connections = ["miniextendr-api/connections"]

[dependencies]
miniextendr-api = { path = "../../../../../miniextendr-api" }
shared-traits = { path = "../../../shared-traits" }

[build-dependencies]
miniextendr-lint = { path = "../../../../../miniextendr-lint" }

# Redirect transitive crates.io lookups to local workspace crates.
# miniextendr-api depends on miniextendr-macros and miniextendr-engine via
# workspace = true (which resolves to version = "*" from crates.io).
# These patches redirect those lookups to the local monorepo paths.
[patch.crates-io]
miniextendr-api = { path = "../../../../../miniextendr-api" }
miniextendr-macros = { path = "../../../../../miniextendr-macros" }
miniextendr-lint = { path = "../../../../../miniextendr-lint" }

# codegen-units = 1 ensures the entire user crate compiles into a single .o file
# inside the staticlib archive. This is required for linkme's distributed_slice:
# the linker only pulls archive members that resolve undefined symbols, so with
# multiple .o files, distributed_slice entries in unreferenced .o files get dropped.
# With a single .o, pulling in R_init_<pkg> brings everything along.
[profile.dev]
codegen-units = 1

[profile.release]
codegen-units = 1
